--- a/README
+++ b/README
@@ -1,1 +1,74 @@
-pyinstaller app.spec
+# 🌍 TerrMine
+
+TerrMine is a **2D sandbox** mining and building game inspired by **Minecraft and Terraria**, built with **Pygame**. Explore a procedurally **generated world**, **mine resources**, **build structures**, **craft items**, and **survive in Survival** or enjoy **unlimited creativity** in Creative mode.
+
+## 🎮 Features
+
+- 🧱 Block-based world with over 50 block types
+- 🔨 Crafting system with both inventory and crafting table recipes
+- 🧰 Dynamic inventory and chests for item management
+- 🌲 Procedural terrain and cave generation with Perlin noise
+- 💣 TNT explosions with particle effects and sound
+- 🧍 Player with health system, damage, fall mechanics, and flying in Creative
+- 🔦 Lighting effects and fog-of-war simulation
+- 🏠 Save and load worlds (with custom names and seeds)
+- 🧪 Built-in console for commands and debugging
+- 🖥️ Multiple screen resolutions and fullscreen support
+
+## 🕹️ Controls
+
+- `E` – Open inventory crafting
+- `I` – Open inventory chest
+- `ESC` – Pause / close UI
+- `~` – Open command console
+- `Mouse` – Place/destroy blocks, drag items
+- `Right Click` – Interact with crafting table or chest
+- `Scroll` – Select block in hotbar
+- `Double Space` – Toggle fly mode (Creative only)
+
+## 📁 World Management
+
+- 🔄 Save and load worlds from the in-game menu
+- 💾 Worlds are stored as `.trrm` files in the `saves/` directory
+
+## 🛠️ Requirements
+
+- Python 3.8+
+- `pygame`
+- `perlin-noise`
+- `pywin32` (Windows-specific)
+
+## Install dependencies:
+
+```bash
+pip install pygame perlin-noise pywin32
+```
+
+## ▶️ Run the Game
+
+```bash
+python app.py
+```
+
+## 💡 TODO / Future Features
+
+- [ ] Multiplayer support
+
+- [ ] More crafting recipes
+
+- [ ] Enemy mobs and combat
+
+- [ ] Biome variation
+
+- [ ] Weather and day/night cycle
+
+## ❤️ Credits
+
+Game by **yar2001T**
+Textures inspired by Minecraft
+
+## 📄License
+
+This project is licensed under the **Creative Commons Attribution-NonCommercial 4.0 International License**.
+
+[![License: CC BY-NC 4.0](https://licensebuttons.net/l/by-nc/4.0/88x31.png)](http://creativecommons.org/licenses/by-nc/4.0/)
